# More-Modern-CMake

./: CMakeLists.txt
cmake/: savepicConfig.cmake
include/savepic/: save_pic.hpp
install/cmake/savepic/: savepicTargets-noconfig.cmake  savepicTargets.cmake
src/: save_pic.cpp
